<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragments.LoginFragment">

    <EditText
        android:id="@+id/emailEdittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/emailTextview"
        app:layout_constraintTop_toBottomOf="@+id/emailTextview" />

    <TextView
        android:id="@+id/emailTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@string/email_label"
        android:textColor="@color/colorYellow"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@string/password_label"
        android:textColor="@color/colorYellow"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/emailEdittext"
        app:layout_constraintTop_toBottomOf="@+id/emailEdittext" />

    <Button
        android:id="@+id/loginButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorBlue"
        android:fontFamily="monospace"
        android:text="@string/login_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorYellow"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/passwordEdittext"
        app:layout_constraintStart_toStartOf="@+id/passwordEdittext"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdittext" />

    <EditText
        android:id="@+id/passwordEdittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/passwordTextview"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextview" />

    <TextView
        android:id="@+id/signupPromptTextview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:text="@string/signup_prompt_msg"
        android:textAlignment="center"
        android:textColor="@color/colorYellow"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>